# solana-100-days-mlh

./: .gitignore  EPOCH_01.md  EPOCH_02.md  EPOCH_03.md  EPOCH_04.md  EPOCH_ONE.md  EPOCH_THREE.md  EPOCH_TWO.md  README.md  package.json  pnpm-lock.yaml  script.bat
.github/workflows/: deploy-day10.yml  deploy-day4.yml  deploy-myfrontend.yml
counter/: .gitignore  Anchor.toml  Cargo.toml  codama.json  package.json  tsconfig.json  txtx.yml
counter/idls/: counter.json
counter/programs/leaky-vault/: Cargo.toml
counter/programs/leaky-vault/src/: lib.rs
counter/programs/leaky-vault/tests/: attack.rs
counter/programs/vault/: Cargo.toml
counter/programs/vault/src/: lib.rs  math.rs
counter/tests/: compose-lab.ts  counter.ts  sol-mover.ts  token-cpi.ts  vault.ts
counter/trident-tests/: Trident.toml
epoch-two-challenge/: Post_one.md  Post_three.md  Post_two.md
my-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
my-frontend/assets/: index-3jFDKIus.css  index-DM-knv2r.js
my-frontend/src/: App.tsx  index.css  walletErrors.ts
week1/day1/: README.md  check-wallet-balance.mjs
week1/day2/: README.md  persistent-wallet.mjs
week1/day3/: PROCEDURE.md
week1/day4/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
week1/day5/: PROCEDURE.md
week1/day6/: BlogPost.md
week10/: package.json  pnpm-lock.yaml
week10/day64/: README.md  derive-pda.ts
week10/day65/: README.md
week10/day66/: README.md  (+1 more)
week_10/: pnpm-lock.yaml
week_14/: idl.json  package.json  pnpm-lock.yaml  run-log.json  run-log1.json  run-mcp.cmd
(+209 files in other folders)
